# project-template

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
config/: constants.py
src/: data_manipulation.py
tests/: test_data_manipulation.py
utils/: bq_utils.py  google_drive_utils.py
